2012-06-26  Tony Chang  <tony@chromium.org>

        [Qt] Enable grid layout LayoutTests
        https://bugs.webkit.org/show_bug.cgi?id=89909

        Reviewed by Csaba Osztrogonác.

        These tests pass, we just need to hook up the overridePreference.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::resetSettings): Reset grid layout and regions between tests.
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::overridePreference): Add WebKitCSSGridLayoutEnabled.

2012-06-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r121236.
        http://trac.webkit.org/changeset/121236
        https://bugs.webkit.org/show_bug.cgi?id=89956

        It's broke the nrwt on qt and gtk platform (Requested by
        kkristof on #webkit).

        * Scripts/webkitpy/layout_tests/port/qt.py:
        (QtPort._build_driver):
        * Scripts/webkitpy/layout_tests/port/xvfbdriver.py:
        (XvfbDriver._start):
        (XvfbDriver._start.x_filter):
        (XvfbDriver.stop):

2012-06-26  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [NRWT] XvfbDriver should choose the next free display
        https://bugs.webkit.org/show_bug.cgi?id=88414

        Reviewed by Dirk Pranke.

        * Scripts/webkitpy/layout_tests/port/qt.py:
        (QtPort._driver_class):
        * Scripts/webkitpy/layout_tests/port/xvfbdriver.py:
        (XvfbDriver.__init__):
        (XvfbDriver._start):
        (XvfbDriver._start.next_free_id):
        (XvfbDriver.stop):

2012-06-25  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Make it possible to build WebKit without QtWidgets
        https://bugs.webkit.org/show_bug.cgi?id=78109

        Reviewed by Tor Arne Vestbø.

        * Tools.pro: Disable various tools that depend on WK1.
        * qmake/mkspecs/features/default_post.prf: Add WK1 as supported static lib in WEBKIT